--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "5.5.14",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
