--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "5.5.14",
+    "multer": "^1.4.2",
     "remove": "^0.1.5"
   },
   "devDependencies": {
