--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "mongoose": "5.5.14",
     "multer": "^1.4.2",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "sharp": "^0.27.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
