--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "5.5.14",
     "multer": "^1.4.2",
     "remove": "^0.1.5",
-    "sharp": "^0.27.2"
+    "sharp": "^0.27.2",
+    "socket.io": "^3.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
